# colorifix_tech_test

./: README.md  main.py  pyproject.toml
data/: data.csv
src/: data.py  neo_connection.py
